--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           <a href="https://www.linkedin.com/in/sergei-baturin/" target="_blanc"
             ><img src="media/linkedin.png" alt="linkedin"
           /></a>
-          <a class="resume" href="/media/Sergei_Baturin(en).pdf" download
+          <a class="resume" href="/media/Sergei_Baturin_(ru).pdf" download
             >download CV</a
           >
         </div>
@@ -44,14 +44,17 @@
               <a href="https://baturin-todo-app.herokuapp.com/" target="_blanc"
                 >Run App</a
               >
-              <a href="https://github.com/SerjBaturin/todo-app" target="_blanc">GitHub Repo</a>
+              <a href="https://github.com/SerjBaturin/todo-app" target="_blanc"
+                >GitHub Repo</a
+              >
             </div>
           </div>
           <div class="description">
             <p>
               <b>Skills:</b> React, Redux, LocalStorage API, Node
-              <br>
-              <b>Description:</b> App with todo cathegories deployed on Heroku cloud service. Create React App on the front-end
+              <br />
+              <b>Description:</b> App with todo cathegories deployed on Heroku
+              cloud service. Create React App on the front-end
             </p>
           </div>
         </div>
@@ -60,23 +63,29 @@
             <h3>Chess Knight moves visualization</h3>
             <img src="/media/chess3.png" alt="todo-app" />
             <div class="links">
-              <a href="https://serjbaturin.github.io/chess-knight-view/" target="_blanc"
+              <a
+                href="https://serjbaturin.github.io/chess-knight-view/"
+                target="_blanc"
                 >Run App</a
               >
-              <a href="https://github.com/SerjBaturin/chess-knight-view" target="_blanc">GitHub Repo</a>
+              <a
+                href="https://github.com/SerjBaturin/chess-knight-view"
+                target="_blanc"
+                >GitHub Repo</a
+              >
             </div>
           </div>
           <div class="description">
             <p>
               <b>Skills:</b> JavaScript, HTML, CSS, GULP
-              <br>
-              <b>Description:</b> Chess Knight moves visualization handled by click
+              <br />
+              <b>Description:</b> Chess Knight moves visualization handled by
+              click
             </p>
           </div>
         </div>
       </div>
     </section>
-    <footer>
-    </footer>
+    <footer></footer>
   </body>
 </html>
