Add Counter project & Text-left description

--- a/index.html
+++ b/index.html
@@ -60,6 +60,28 @@
         </div>
         <div class="project">
           <div class="project-img">
+            <h3>React / Redux Counter</h3>
+            <img src="/media/counter.png" alt="todo-app" />
+            <div class="links">
+              <a href="https://serjbaturin.github.io/counter" target="_blanc"
+                >Run App</a
+              >
+              <a href="https://github.com/SerjBaturin/counter" target="_blanc"
+                >GitHub Repo</a
+              >
+            </div>
+          </div>
+          <div class="description">
+            <p>
+              <b>Skills:</b> React, Redux
+              <br />
+              <b>Description:</b> Simple counter (+1, -1). State stores in
+              Redux.
+            </p>
+          </div>
+        </div>
+        <div class="project">
+          <div class="project-img">
             <h3>Chess Knight moves visualization</h3>
             <img src="/media/chess3.png" alt="todo-app" />
             <div class="links">
