Add Holiday section

--- a/sensum/index.html
+++ b/sensum/index.html
@@ -55,25 +55,157 @@
         </div>
       </div>
     </section>
-    <!-- HERO END-->
+    <!-- HERO END -->
+
+    <!-- LECTORS -->
+    <section class="lectors">
+      <div class="container">
+        <div class="lectors__wrapper">
+          <h2 class="lectors__head">Лекторы конференции</h2>
+          <div class="lectors__lector">
+            <img
+              src="img/lectors/rabinovichAlmin.jpg"
+              alt="lector"
+              class="lector__img"
+            />
+            <div class="lector__caption">
+              <p class="lector__name">Альмин Рабинович</p>
+              <div class="lector__theme">Новое в бухучете и отчетности</div>
+            </div>
+          </div>
+          <div class="lectors__lector">
+            <img
+              src="img/lectors/VolkovVladislav.png"
+              alt="lector"
+              class="lector__img"
+            />
+            <div class="lector__caption">
+              <p class="lector__name">Владислав Волков</p>
+              <div class="lector__theme">
+                НДФЛ: изменения в расчете и отчетности
+              </div>
+            </div>
+          </div>
+          <div class="lectors__lector">
+            <img
+              src="img/lectors/kotovaLubov.jpg"
+              alt="lector"
+              class="lector__img"
+            />
+            <div class="lector__caption">
+              <p class="lector__name">Любовь Котова</p>
+              <div class="lector__theme">
+                Страховые взносы: новое в форме РСВ, расчете и лимитах
+              </div>
+            </div>
+          </div>
+          <div class="lectors__lector">
+            <img
+              src="img/lectors/hritininaOlga.png"
+              alt="lector"
+              class="lector__img"
+            />
+            <div class="lector__caption">
+              <p class="lector__name">Ольга Хритинина</p>
+              <div class="lector__theme">
+                Изменения в налогах за имущество
+              </div>
+            </div>
+          </div>
+          <div class="lectors__lector">
+            <img
+              src="img/lectors/mityukovaElvira.jpg"
+              alt="lector"
+              class="lector__img"
+            />
+            <div class="lector__caption">
+              <p class="lector__name">Эльвира Митюкова</p>
+              <div class="lector__theme">
+                Новое в НДС, налоге на прибыль и расчетах
+              </div>
+            </div>
+          </div>
+          <div class="lectors__lector">
+            <img
+              src="img/lectors/vodovozovAlexandr.png"
+              alt="lector"
+              class="lector__img"
+            />
+            <div class="lector__caption">
+              <p class="lector__name">Александр Водовозов</p>
+              <div class="lector__theme">
+                Спецрежимы: новые ставки, лимиты и виды деятельности
+              </div>
+            </div>
+          </div>
+          <div class="lectors__lector">
+            <img
+              src="img/lectors/andreevaValentina.png"
+              alt="lector"
+              class="lector__img"
+            />
+            <div class="lector__caption">
+              <p class="lector__name">Валентина Андреева</p>
+              <div class="lector__theme">
+                Изменения в расчетах с сотрудниками
+              </div>
+            </div>
+          </div>
+          <div class="lectors__lector">
+            <img
+              src="img/lectors/samkovaNadezhda.jpg"
+              alt="lector"
+              class="lector__img"
+            />
+            <div class="lector__caption">
+              <p class="lector__name">Надежда Самкова</p>
+              <div class="lector__theme">
+                Рекомендации, как применить изменения на практике
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- LECTORS END -->
+
+    <!-- HOLIDAY -->
+    <section class="holiday">
+      <div class="container">
+        <div class="holiday__wrapper">
+          <h2 class="holiday__head">
+            Веселый ведущий, красивое живое исполнение, шампанское и сладкие
+            десерты, розыгрыш подарков и море сюрпризов от команды СЕНСУМ
+          </h2>
+        </div>
+      </div>
+    </section>
+    <!-- HOLIDAY END -->
 
     <!-- MEDIA -->
     <section class="media">
       <div class="container">
         <div class="media__wrapper">
-          <video
+          <iframe
+            width="560"
+            height="315"
+            src="https://www.youtube.com/embed/tS7jftTtH-4"
+            frameborder="0"
+            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen
+            class="media__main__video"
+          ></iframe>
+          <!-- <video
             class="media__main__video"
             preload
             controls
-            width="500"
-            height="400"
             poster="img/logo/bss-logo.svg"
           >
             <source
               src="video/main.mp4"
               type='video/mp4; codecs="avc1.42E01E, mp4a.40.2"'
             />
-          </video>
+          </video> -->
         </div>
       </div>
     </section>
