Add some adaptive

--- a/sensum/index.html
+++ b/sensum/index.html
@@ -177,6 +177,11 @@
             Веселый ведущий, красивое живое исполнение, шампанское и сладкие
             десерты, розыгрыш подарков и море сюрпризов от команды СЕНСУМ
           </h2>
+          <a
+            href="https://seminar.1gl.ru/seminar/570-vserossiyskaya-prakticheskaya-konferentsiya-buhuchet-i-nalogi-v-2020-godu-otchetnaya?dlr=Array&utm_source=sensum"
+            class="hero__btn"
+            >ЗАРЕГИСТРИРОВАТЬСЯ</a
+          >
         </div>
       </div>
     </section>
@@ -293,6 +298,16 @@
         infinite: true,
         slidesToShow: 4,
         slidesToScroll: 1,
+        centerMode: true,
+        responsive: [
+          {
+            breakpoint: 599,
+            settings: {
+              slidesToShow: 1,
+              slidesToScroll: 1,
+            },
+          },
+        ],
       });
     </script>
   </body>
