--- a/sensum/index.html
+++ b/sensum/index.html
@@ -88,7 +88,7 @@
           </div>
           <div class="lectors__lector">
             <img
-              src="img/lectors/kotovaLubov.jpg"
+              src="img/lectors/kotovaLubov.png"
               alt="lector"
               class="lector__img"
             />
@@ -114,7 +114,7 @@
           </div>
           <div class="lectors__lector">
             <img
-              src="img/lectors/mityukovaElvira.jpg"
+              src="img/lectors/mityukovaElvira.png"
               alt="lector"
               class="lector__img"
             />
@@ -153,7 +153,7 @@
           </div>
           <div class="lectors__lector">
             <img
-              src="img/lectors/samkovaNadezhda.jpg"
+              src="img/lectors/samkovaNadezhda.png"
               alt="lector"
               class="lector__img"
             />
