Fix HERO Add Footer

--- a/sensum/index.html
+++ b/sensum/index.html
@@ -62,7 +62,7 @@
               количеству участников. 1200 бухгалтеров со всей Республики
               соберутся здесь...
             </p>
-            <img src="img/zal.jpg" alt="" />
+            <img src="img/zalWhite.png" alt="photo zala" />
           </div>
         </div>
       </div>
@@ -308,8 +308,16 @@
     <footer class="footer" id="footer">
       <div class="container">
         <div class="footer-wrapper">
-          <span class="header__cta">Мы всегда рады Вашему звонку:</span>
-          <div class="header__phone">8 (800) 333-77-13</div>
+          <div class="footer__organization">
+            <span>Организатор конференции: ООО СЕНСУМ и тд и тп</span>
+          </div>
+          <div class="footer__contacts">
+            <a href="http://sensum.ru/" target="_blanc">
+              <img src="img/logo/sensum.png" alt="logo" class="footer__logo" />
+            </a>
+            <span class="footer__cta">Мы всегда рады Вашему звонку:</span>
+            <div class="footer__phone">8 (800) 333-77-13</div>
+          </div>
         </div>
       </div>
     </footer>
