--- a/sensum/index.html
+++ b/sensum/index.html
@@ -69,10 +69,97 @@
     </section>
     <!-- HERO END -->
 
-    <!-- PAST -->
-    <section class="past">
+    <!-- MEDIA START -->
+    <section class="media">
       <div class="container">
-        <div class="past__wrapper"></div>
+        <div class="media__wrapper">
+          <div class="media__main">
+            <img
+              src="img/main__prev.png"
+              alt="photo"
+              class="media__main__img"
+            />
+          </div>
+          <div class="media__sidebar">
+            <img
+              src="img/main__prev.png"
+              alt="photo"
+              class="media__sidebar__img 10years"
+            />
+            <img
+              src="img/main__prev.png"
+              alt="photo"
+              class="media__sidebar__img bst"
+            />
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- MEDIA END -->
+
+    <!-- PAST -->
+    <section class="gallery">
+      <div class="container">
+        <div class="gallery__wrapper">
+          <h2 class="gallery__head">На прошлой конференции</h2>
+          <div class="gallery__slider">
+            <img
+              src="img/gallery/1.jpg"
+              alt="past-photo"
+              class="gallery__img"
+            />
+            <img
+              src="img/gallery/10.JPG"
+              alt="past-photo"
+              class="gallery__img"
+            />
+            <img
+              src="img/gallery/11.jpg"
+              alt="past-photo"
+              class="gallery__img"
+            />
+            <img
+              src="img/gallery/12.jpg"
+              alt="past-photo"
+              class="gallery__img"
+            />
+            <img
+              src="img/gallery/13.jpg"
+              alt="past-photo"
+              class="gallery__img"
+            />
+            <img
+              src="img/gallery/14.jpg"
+              alt="past-photo"
+              class="gallery__img"
+            />
+            <img
+              src="img/gallery/15.jpg"
+              alt="past-photo"
+              class="gallery__img"
+            />
+            <img
+              src="img/gallery/16.jpg"
+              alt="past-photo"
+              class="gallery__img"
+            />
+            <img
+              src="img/gallery/17.jpg"
+              alt="past-photo"
+              class="gallery__img"
+            />
+            <img
+              src="img/gallery/2.jpg"
+              alt="past-photo"
+              class="gallery__img"
+            />
+            <img
+              src="img/gallery/3.jpg"
+              alt="past-photo"
+              class="gallery__img"
+            />
+          </div>
+        </div>
       </div>
     </section>
     <!-- PAST END -->
@@ -207,36 +294,6 @@
     </section>
     <!-- HOLIDAY END -->
 
-    <!-- MEDIA START -->
-    <section class="media">
-      <div class="container">
-        <div class="media__wrapper">
-          <h2 class="media__head">Система Главбух</h2>
-          <iframe
-            width="560"
-            height="315"
-            src="https://www.youtube.com/embed/tS7jftTtH-4"
-            frameborder="0"
-            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-            allowfullscreen
-            class="media__main__video"
-          ></iframe>
-          <!-- <video
-            class="media__main__video"
-            preload
-            controls
-            poster="img/logo/bss-logo.svg"
-          >
-            <source
-              src="video/main.mp4"
-              type='video/mp4; codecs="avc1.42E01E, mp4a.40.2"'
-            />
-          </video> -->
-        </div>
-      </div>
-    </section>
-    <!-- MEDIA END -->
-
     <!-- CLIENTS START-->
     <section class="clients">
       <div class="container">
@@ -323,8 +380,55 @@
     </footer>
     <!-- FOOTER END -->
 
+    <!-- MODAL 1-->
+    <section class="modal modal1">
+      <div class="modal__wrapper">
+        <div class="modal__exit">закрыть</div>
+        <video class="" preload controls>
+          <source
+            id="modal-video"
+            src="video/main.mp4"
+            type='video/mp4; codecs="avc1.42E01E, mp4a.40.2"'
+            class="video"
+          />
+        </video>
+      </div>
+    </section>
+    <!-- MODAL 1 END -->
+    <!-- MODAL 2 -->
+    <section class="modal modal2">
+      <div class="modal__wrapper">
+        <div class="modal__exit">закрыть</div>
+        <video class="" preload controls>
+          <source
+            id="modal-video"
+            src="video/10years.mp4"
+            type='video/mp4; codecs="avc1.42E01E, mp4a.40.2"'
+            class="video"
+          />
+        </video>
+      </div>
+    </section>
+    <!-- MODAL 2 END -->
+    <!-- MODAL 3 -->
+    <section class="modal modal3">
+      <div class="modal__wrapper">
+        <div class="modal__exit">закрыть</div>
+        <video class="" preload controls>
+          <source
+            id="modal-video"
+            src="video/BST.mp4"
+            type='video/mp4; codecs="avc1.42E01E, mp4a.40.2"'
+            class="video"
+          />
+        </video>
+      </div>
+    </section>
+    <!-- MODAL 3 END -->
+
     <script src="js/jQuery341.min.js"></script>
     <script src="js/slick/slick.min.js"></script>
+    <script src="js/js.js"></script>
     <script>
       $(".clients__slider").slick({
         autoplay: true,
@@ -335,6 +439,27 @@
         slidesToShow: 4,
         slidesToScroll: 1,
         centerMode: true,
+        responsive: [
+          {
+            breakpoint: 599,
+            settings: {
+              slidesToShow: 1,
+              slidesToScroll: 1,
+            },
+          },
+        ],
+      });
+      $(".gallery__slider").slick({
+        autoplay: false,
+        speed: 1000,
+        arrows: true,
+        dots: false,
+        infinite: true,
+        slidesToShow: 1,
+        slidesToScroll: 1,
+        centerMode: true,
+        nextArrow: '<div class="gallery__arrow gallery__next">></div>',
+        prevArrow: '<div class="gallery__arrow gallery__prev"><</div>',
         responsive: [
           {
             breakpoint: 599,
