Fix Lectors Footer Holiday SMI

--- a/sensum/index.html
+++ b/sensum/index.html
@@ -69,39 +69,42 @@
     </section>
     <!-- HERO END -->
 
-    <!-- MEDIA START -->
-    <section class="media">
+    <!-- LECTORS START -->
+    <section class="lectors">
       <div class="container">
-        <div class="media__wrapper">
-          <div class="media__main">
+        <div class="lectors__wrapper">
+          <h2 class="lectors__head">Наши лекторы</h2>
+          <div class="lectors__lector">
             <img
-              src="img/main__prev.png"
-              alt="photo"
-              class="media__main__img"
+              src="img/lectors/samkovaNadezhda.jpg"
+              alt="lector"
+              class="lector__img"
             />
-          </div>
-          <div class="media__sidebar">
-            <img
-              src="img/main__prev.png"
-              alt="photo"
-              class="media__sidebar__img 10years"
-            />
-            <img
-              src="img/main__prev.png"
-              alt="photo"
-              class="media__sidebar__img bst"
-            />
+            <div class="lector__caption">
+              <p class="lector__name">Самкова Надежда Александровна</p>
+              <div class="lector__who">
+                Ведущий эксперт-консультант по налогообложению, преподаватель
+                курсов обучения налоговых консультантов и профессиональных
+                бухгалтеров, член института профессиональных бухгалтеров и
+                аудиторов России, член Палаты налоговых консультантов
+              </div>
+              <div class="lector__other__lectors">
+                <b>И другие лекторы: </b>Андреева Валентина, Водовозов
+                Александр, Волков Владислав, Котова Любовь, Митюкова Эльвира,
+                Рабинович Альмин, Хритинина Ольга
+              </div>
+            </div>
           </div>
         </div>
       </div>
     </section>
-    <!-- MEDIA END -->
+    <!-- LECTORS END -->
 
     <!-- PAST -->
     <section class="gallery">
       <div class="container">
         <div class="gallery__wrapper">
-          <h2 class="gallery__head">На прошлой конференции</h2>
+          <h2 class="gallery__head">Наши семинары</h2>
           <div class="gallery__slider">
             <img
               src="img/gallery/1.jpg"
@@ -164,117 +167,34 @@
     </section>
     <!-- PAST END -->
 
-    <!-- LECTORS START -->
-    <section class="lectors">
+    <!-- MEDIA START -->
+    <section class="media">
       <div class="container">
-        <div class="lectors__wrapper">
-          <h2 class="lectors__head">Лекторы конференции</h2>
-          <div class="lectors__lector">
+        <h2 class="media__head">СМИ о нас</h2>
+        <div class="media__wrapper">
+          <div class="media__main">
             <img
-              src="img/lectors/rabinovichAlmin.jpg"
-              alt="lector"
-              class="lector__img"
+              src="img/main__prev.png"
+              alt="photo"
+              class="media__main__img"
             />
-            <div class="lector__caption">
-              <p class="lector__name">Альмин Рабинович</p>
-              <div class="lector__theme">Новое в бухучете и отчетности</div>
-            </div>
           </div>
-          <div class="lectors__lector">
+          <div class="media__sidebar">
             <img
-              src="img/lectors/VolkovVladislav.png"
-              alt="lector"
-              class="lector__img"
+              src="img/10years__prev.png"
+              alt="photo"
+              class="media__sidebar__img 10years"
             />
-            <div class="lector__caption">
-              <p class="lector__name">Владислав Волков</p>
-              <div class="lector__theme">
-                НДФЛ: изменения в расчете и отчетности
-              </div>
-            </div>
-          </div>
-          <div class="lectors__lector">
             <img
-              src="img/lectors/kotovaLubov.png"
-              alt="lector"
-              class="lector__img"
+              src="img/bst__prev.png"
+              alt="photo"
+              class="media__sidebar__img bst"
             />
-            <div class="lector__caption">
-              <p class="lector__name">Любовь Котова</p>
-              <div class="lector__theme">
-                Страховые взносы: новое в форме РСВ, расчете и лимитах
-              </div>
-            </div>
-          </div>
-          <div class="lectors__lector">
-            <img
-              src="img/lectors/hritininaOlga.png"
-              alt="lector"
-              class="lector__img"
-            />
-            <div class="lector__caption">
-              <p class="lector__name">Ольга Хритинина</p>
-              <div class="lector__theme">
-                Изменения в налогах за имущество
-              </div>
-            </div>
-          </div>
-          <div class="lectors__lector">
-            <img
-              src="img/lectors/mityukovaElvira.png"
-              alt="lector"
-              class="lector__img"
-            />
-            <div class="lector__caption">
-              <p class="lector__name">Эльвира Митюкова</p>
-              <div class="lector__theme">
-                Новое в НДС, налоге на прибыль и расчетах
-              </div>
-            </div>
-          </div>
-          <div class="lectors__lector">
-            <img
-              src="img/lectors/vodovozovAlexandr.png"
-              alt="lector"
-              class="lector__img"
-            />
-            <div class="lector__caption">
-              <p class="lector__name">Александр Водовозов</p>
-              <div class="lector__theme">
-                Спецрежимы: новые ставки, лимиты и виды деятельности
-              </div>
-            </div>
-          </div>
-          <div class="lectors__lector">
-            <img
-              src="img/lectors/andreevaValentina.png"
-              alt="lector"
-              class="lector__img"
-            />
-            <div class="lector__caption">
-              <p class="lector__name">Валентина Андреева</p>
-              <div class="lector__theme">
-                Изменения в расчетах с сотрудниками
-              </div>
-            </div>
-          </div>
-          <div class="lectors__lector">
-            <img
-              src="img/lectors/samkovaNadezhda.png"
-              alt="lector"
-              class="lector__img"
-            />
-            <div class="lector__caption">
-              <p class="lector__name">Надежда Самкова</p>
-              <div class="lector__theme">
-                Рекомендации, как применить изменения на практике
-              </div>
-            </div>
           </div>
         </div>
       </div>
     </section>
-    <!-- LECTORS END -->
+    <!-- MEDIA END -->
 
     <!-- HOLIDAY START -->
     <section class="holiday">
@@ -364,17 +284,16 @@
     <!-- FOOTER START -->
     <footer class="footer" id="footer">
       <div class="container">
-        <div class="footer-wrapper">
-          <div class="footer__organization">
-            <span>Организатор конференции: ООО СЕНСУМ и тд и тп</span>
-          </div>
-          <div class="footer__contacts">
-            <a href="http://sensum.ru/" target="_blanc">
-              <img src="img/logo/sensum.png" alt="logo" class="footer__logo" />
-            </a>
-            <span class="footer__cta">Мы всегда рады Вашему звонку:</span>
-            <div class="footer__phone">8 (800) 333-77-13</div>
-          </div>
+        <div class="footer__wrapper">
+          <a href="http://sensum.ru/" target="_blanc">
+            <img
+              src="img/logo/sensumWhite.png"
+              alt="logo"
+              class="footer__logo"
+            />
+          </a>
+          <div class="footer__cta">Мы всегда рады Вашему звонку</div>
+          <div class="footer__phone">8 (800) 333-77-13</div>
         </div>
       </div>
     </footer>
