--- a/sensum/index.html
+++ b/sensum/index.html
@@ -35,15 +35,10 @@
     <section class="hero">
       <div class="container">
         <div class="hero__wrapper">
-          <!-- <img
-            src="img/logo/bss-logo.svg"
-            alt="bss-logo"
-            class="hero__bss-logo"
-          /> -->
           <p class="hero__utp">
             Участвуй в Конференции<br />
-            получи <b>гарантированный приз</b> – доступ к
-            <b>Системе Главбух</b> ВИП-версия на 1 месяц<br />
+            получи <b>ГАРАНТИРОВАННЫЙ ПРИЗ</b> – доступ к
+            <b>Системе Главбух</b> ВИП-версия<br />на 1 месяц<br />
             выиграй
             <b>ГОДОВОЙ доступ Системы Главбух!</b>
             <img src="img/logo/bss-logo.svg" alt="logo" />
@@ -58,11 +53,12 @@
           >
           <div class="hero__location">
             <p>
-              Одновременно в 30 городах России. УФА готовится побить рекорд по
-              количеству участников. 1200 бухгалтеров со всей Республики
-              соберутся здесь...
+              Одновременно в 30 городах России<br />УФА готовится побить
+              рекорд<br />
+              по количеству участников<br />1200 БУХГАЛТЕРОВ со всей
+              Республики<br />соберутся ЗДЕСЬ
             </p>
-            <img src="img/zalWhite.png" alt="photo zala" />
+            <img src="img/zal.png" alt="photo zala" />
           </div>
         </div>
       </div>
