Add Form Validation Section into portfolio

--- a/index.html
+++ b/index.html
@@ -38,6 +38,29 @@
       <div class="projects-wrapper">
         <div class="project">
           <div class="project-img">
+            <h3>Form validation</h3>
+            <img src="/media/validation.png" alt="form validation" />
+            <div class="links">
+              <a href="https://serjbaturin.github.io/validation" target="_blanc"
+                >Run App</a
+              >
+              <a
+                href="https://github.com/SerjBaturin/validation"
+                target="_blanc"
+                >GitHub Repo</a
+              >
+            </div>
+          </div>
+          <div class="description">
+            <p>
+              <b>Skills:</b> Vanilla JS, OOP, Regular expressions
+              <br />
+              <b>Description:</b> Form validation examples
+            </p>
+          </div>
+        </div>
+        <div class="project">
+          <div class="project-img">
             <h3>Todo app with react / redux</h3>
             <img src="/media/todo-app.png" alt="todo-app" />
             <div class="links">
