Add Birs & Scatterplot into INFO

--- a/info/index.html
+++ b/info/index.html
@@ -8,6 +8,7 @@
     <title>INFO</title>
   </head>
   <body>
+    <h1>Data visualization with D3.js</h1>
     <script src="dist/bundle.js"></script>
   </body>
 </html>
