Add new CV & add Data Vis Projects

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <div class="header__text">
         <h2>Serj Baturin</h2>
         <h1>front-end developer</h1>
-        <span>react | redux | node | mongoDB</span>
+        <span>react | redux | node | SQL & NoSQL DBs</span>
         <a href="tel:+79177747752">+7 917 774 7752</a>
         <a href="mailto:sergejbaturin1985@gmail.com"
           >sergejbaturin1985@gmail.com</a
@@ -27,7 +27,7 @@
           <a href="https://www.linkedin.com/in/sergei-baturin/" target="_blanc"
             ><img src="media/linkedin.png" alt="linkedin"
           /></a>
-          <a class="resume" href="/media/Sergei_Baturin_(ru).pdf" download
+          <a class="resume" href="/media/Sergei_Baturin.pdf" download
             >download CV</a
           >
         </div>
@@ -36,6 +36,29 @@
     <section class="projects">
       <h2><span>projects:</span></h2>
       <div class="projects-wrapper">
+          <div class="project">
+              <div class="project-img">
+                <h3>Data visualization</h3>
+                <img src="/media/data.png" alt="data visualization" />
+                <div class="links">
+                  <a href="https://serjbaturin.github.io/info" target="_blanc"
+                    >Run App</a
+                  >
+                  <a
+                    href="https://github.com/SerjBaturin/info"
+                    target="_blanc"
+                    >GitHub Repo</a
+                  >
+                </div>
+              </div>
+              <div class="description">
+                <p>
+                  <b>Skills:</b> D3.js, Vanilla JS
+                  <br />
+                  <b>Description:</b> Some barcharts with dynamic data
+                </p>
+              </div>
+            </div>
         <div class="project">
           <div class="project-img">
             <h3>Form validation</h3>
