--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           <a href="https://www.linkedin.com/in/sergei-baturin/" target="_blanc"
             ><img src="media/linkedin.png" alt="linkedin"
           /></a>
-          <a class="resume" href="/media/Sergei_Baturin.pdf" download
+          <a class="resume" href="/media/SergeiBaturin.Front-end.pdf" download
             >download CV</a
           >
         </div>
@@ -36,29 +36,27 @@
     <section class="projects">
       <h2><span>projects:</span></h2>
       <div class="projects-wrapper">
-          <div class="project">
-              <div class="project-img">
-                <h3>Data visualization</h3>
-                <img src="/media/data.png" alt="data visualization" />
-                <div class="links">
-                  <a href="https://serjbaturin.github.io/info" target="_blanc"
-                    >Run App</a
-                  >
-                  <a
-                    href="https://github.com/SerjBaturin/info"
-                    target="_blanc"
-                    >GitHub Repo</a
-                  >
-                </div>
-              </div>
-              <div class="description">
-                <p>
-                  <b>Skills:</b> D3.js, Vanilla JS
-                  <br />
-                  <b>Description:</b> Some barcharts with dynamic data
-                </p>
-              </div>
+        <div class="project">
+          <div class="project-img">
+            <h3>Data visualization</h3>
+            <img src="/media/data.png" alt="data visualization" />
+            <div class="links">
+              <a href="https://serjbaturin.github.io/info" target="_blanc"
+                >Run App</a
+              >
+              <a href="https://github.com/SerjBaturin/info" target="_blanc"
+                >GitHub Repo</a
+              >
             </div>
+          </div>
+          <div class="description">
+            <p>
+              <b>Skills:</b> D3.js, Vanilla JS
+              <br />
+              <b>Description:</b> Some barcharts with dynamic data
+            </p>
+          </div>
+        </div>
         <div class="project">
           <div class="project-img">
             <h3>Form validation</h3>
