--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           <a href="https://www.linkedin.com/in/sergei-baturin/" target="_blanc"
             ><img src="media/linkedin.png" alt="linkedin"
           /></a>
-          <a class="resume" href="/media/SergeiBaturin.Front-end.pdf" download
+          <a class="resume" href="/media/SergeiBaturinCV.pdf" download
             >download CV</a
           >
         </div>
